<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_margin"
    android:paddingTop="@dimen/activity_margin"
    android:paddingRight="@dimen/activity_margin">

    <TextView
        android:id="@+id/dialog_staff_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/ic_create_black_24dp"
        android:drawablePadding="20dp"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="8sp"
        android:text="@string/product_details"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="#5dade2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_staff_title" />

    <EditText
        android:id="@+id/edtDialogName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/enter_product_name"
        android:inputType="textCapSentences|textMultiLine"
        android:textColorHint="@color/hint_enter_note"
        android:textSize="@dimen/input_new_note"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <EditText
        android:id="@+id/edtDialogPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/enter_price"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/hint_enter_note"
        android:textSize="@dimen/input_new_note"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDialogName" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDialogPrice">

        <ImageView
            android:id="@+id/ivDialogProd"
            android:layout_width="150dp"
            android:layout_height="120dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            />

    </LinearLayout>

    <ImageView
        android:id="@+id/ivAddPhoto"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:layout_marginStart="128dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/ic_add_a_photo_black_24dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>