<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="8dp">
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end"
            android:background="#ffffff">
            <ImageView
                android:id="@+id/ivMore"
                android:layout_width="42dp"
                android:layout_height="38dp"
                android:layout_gravity="center"
                android:contentDescription="@string/todo"
                android:padding="4dp"
                android:src="@drawable/ic_more_blue_24dp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/ivProdImg"
            android:layout_width="150dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvProdName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_product_name"
                    android:textColor="@color/text_color"
                    android:textStyle="bold"
                    android:padding="4dp"
                    />

                <TextView
                    android:id="@+id/tvProdPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_price"
                    android:textColor="@color/text_color"
                    android:padding="4dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>
</androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>