<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.MainActivity"
    tools:showIn="@layout/app_bar_main"
    android:id="@+id/main_container">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@color/hint_enter_note">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:background="@color/colorAccent"
                    android:padding="@dimen/dimen_8dp">

                    <TextView
                        android:layout_width="27.5sp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/item"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/qty"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/price_inr"
                        android:textColor="@android:color/white" />
                </TableRow>
            </TableLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_bill"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTotal1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="total"
                    android:textStyle="bold"
                    android:fontFamily="serif"
                    android:layout_weight="1"
                    android:paddingStart="9sp"
                    android:textColor="@color/text_color"/>

                <Button
                    android:id="@+id/btnPayment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_custom"
                    android:drawableStart="@drawable/ic_payment_black_24dp"
                    android:drawablePadding="9dp"
                    android:padding="9dp"
                    android:text="@string/payment"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    android:onClick="makePayment"/>

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ALL"
                android:layout_margin="4dp"
                android:textStyle="bold"
                android:onClick="getAllProduct"
                android:background="@drawable/button"
                android:textColor="@color/colorWhite"
                android:fontFamily="sans-serif-medium"/>
            <ImageView
                android:layout_width="75dp"
                android:layout_height="55dp"
                android:src="@drawable/barcode"
                android:visibility="gone"
                android:contentDescription="@string/todo" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#c3c1bd"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_product"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0.5" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>